src/Parser/CommandGrammarParser.py
# Generated from src/Parser/CommandGrammar.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CommandGrammarParser ( Parser ):

    grammarFileName = "CommandGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'\"'", "'''", "';'", "'>'", 
                     "'<'", "'\\n'", "'`'", "'|'" ]

    symbolicNames = [ "<INVALID>", "UNQUOTED", "DOUBLE_QUOTE", "SINGLE_QUOTE", 
                      "SEMICOLON", "GREATER_THAN", "LESS_THAN", "NEWLINE", 
                      "BACKQUOTE", "PIPE", "WHITESPACE" ]

    RULE_command = 0
    RULE_subCommand = 1
    RULE_pipe = 2
    RULE_call = 3
    RULE_redirection = 4
    RULE_argument = 5
    RULE_quoted = 6
    RULE_singleQuoted = 7
    RULE_backQuoted = 8
    RULE_doubleQuoted = 9

    ruleNames =  [ "command", "subCommand", "pipe", "call", "redirection", 
                   "argument", "quoted", "singleQuoted", "backQuoted", "doubleQuoted" ]

    EOF = Token.EOF
    UNQUOTED=1
    DOUBLE_QUOTE=2
    SINGLE_QUOTE=3
    SEMICOLON=4
    GREATER_THAN=5
    LESS_THAN=6
    NEWLINE=7
    BACKQUOTE=8
    PIPE=9
    WHITESPACE=10

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def subCommand(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CommandGrammarParser.SubCommandContext)
            else:
                return self.getTypedRuleContext(CommandGrammarParser.SubCommandContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(CommandGrammarParser.SEMICOLON)
            else:
                return self.getToken(CommandGrammarParser.SEMICOLON, i)

        def getRuleIndex(self):
            return CommandGrammarParser.RULE_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommand" ):
                listener.enterCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommand" ):
                listener.exitCommand(self)




    def command(self):

        localctx = CommandGrammarParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_command)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 20
            self.subCommand()
            self.state = 25
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 21
                    self.match(CommandGrammarParser.SEMICOLON)
                    self.state = 22
                    self.subCommand() 
                self.state = 27
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 29
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 28
                self.match(CommandGrammarParser.SEMICOLON)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubCommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pipe(self):
            return self.getTypedRuleContext(CommandGrammarParser.PipeContext,0)


        def call(self):
            return self.getTypedRuleContext(CommandGrammarParser.CallContext,0)


        def getRuleIndex(self):
            return CommandGrammarParser.RULE_subCommand

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubCommand" ):
                listener.enterSubCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubCommand" ):
                listener.exitSubCommand(self)




    def subCommand(self):

        localctx = CommandGrammarParser.SubCommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_subCommand)
        try:
            self.state = 33
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 31
                self.pipe()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 32
                self.call()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PipeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def call(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CommandGrammarParser.CallContext)
            else:
                return self.getTypedRuleContext(CommandGrammarParser.CallContext,i)


        def PIPE(self):
            return self.getToken(CommandGrammarParser.PIPE, 0)

        def pipe(self):
            return self.getTypedRuleContext(CommandGrammarParser.PipeContext,0)


        def getRuleIndex(self):
            return CommandGrammarParser.RULE_pipe

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPipe" ):
                listener.enterPipe(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPipe" ):
                listener.exitPipe(self)




    def pipe(self):

        localctx = CommandGrammarParser.PipeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_pipe)
        try:
            self.state = 43
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 35
                self.call()
                self.state = 36
                self.match(CommandGrammarParser.PIPE)
                self.state = 37
                self.call()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 39
                self.call()
                self.state = 40
                self.match(CommandGrammarParser.PIPE)
                self.state = 41
                self.pipe()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def argument(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CommandGrammarParser.ArgumentContext)
            else:
                return self.getTypedRuleContext(CommandGrammarParser.ArgumentContext,i)


        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(CommandGrammarParser.WHITESPACE)
            else:
                return self.getToken(CommandGrammarParser.WHITESPACE, i)

        def redirection(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CommandGrammarParser.RedirectionContext)
            else:
                return self.getTypedRuleContext(CommandGrammarParser.RedirectionContext,i)


        def getRuleIndex(self):
            return CommandGrammarParser.RULE_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCall" ):
                listener.enterCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCall" ):
                listener.exitCall(self)




    def call(self):

        localctx = CommandGrammarParser.CallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_call)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 45
                self.match(CommandGrammarParser.WHITESPACE)


            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5 or _la==6:
                self.state = 48
                self.redirection()
                self.state = 50
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==10:
                    self.state = 49
                    self.match(CommandGrammarParser.WHITESPACE)


                self.state = 56
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 57
            self.argument()
            self.state = 64
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 59
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==10:
                        self.state = 58
                        self.match(CommandGrammarParser.WHITESPACE)


                    self.state = 61
                    self.redirection() 
                self.state = 66
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

            self.state = 73
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 68
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==10:
                        self.state = 67
                        self.match(CommandGrammarParser.WHITESPACE)


                    self.state = 70
                    self.argument() 
                self.state = 75
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 76
                self.match(CommandGrammarParser.WHITESPACE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RedirectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LESS_THAN(self):
            return self.getToken(CommandGrammarParser.LESS_THAN, 0)

        def argument(self):
            return self.getTypedRuleContext(CommandGrammarParser.ArgumentContext,0)


        def WHITESPACE(self):
            return self.getToken(CommandGrammarParser.WHITESPACE, 0)

        def GREATER_THAN(self):
            return self.getToken(CommandGrammarParser.GREATER_THAN, 0)

        def getRuleIndex(self):
            return CommandGrammarParser.RULE_redirection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRedirection" ):
                listener.enterRedirection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRedirection" ):
                listener.exitRedirection(self)




    def redirection(self):

        localctx = CommandGrammarParser.RedirectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_redirection)
        self._la = 0 # Token type
        try:
            self.state = 89
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 79
                self.match(CommandGrammarParser.LESS_THAN)
                self.state = 81
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==10:
                    self.state = 80
                    self.match(CommandGrammarParser.WHITESPACE)


                self.state = 83
                self.argument()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 84
                self.match(CommandGrammarParser.GREATER_THAN)
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==10:
                    self.state = 85
                    self.match(CommandGrammarParser.WHITESPACE)


                self.state = 88
                self.argument()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def quoted(self):
            return self.getTypedRuleContext(CommandGrammarParser.QuotedContext,0)


        def UNQUOTED(self):
            return self.getToken(CommandGrammarParser.UNQUOTED, 0)

        def getRuleIndex(self):
            return CommandGrammarParser.RULE_argument

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgument" ):
                listener.enterArgument(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgument" ):
                listener.exitArgument(self)




    def argument(self):

        localctx = CommandGrammarParser.ArgumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_argument)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2, 3, 8]:
                self.state = 91
                self.quoted()
                pass
            elif token in [1]:
                self.state = 92
                self.match(CommandGrammarParser.UNQUOTED)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QuotedContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def singleQuoted(self):
            return self.getTypedRuleContext(CommandGrammarParser.SingleQuotedContext,0)


        def doubleQuoted(self):
            return self.getTypedRuleContext(CommandGrammarParser.DoubleQuotedContext,0)


        def backQuoted(self):
            return self.getTypedRuleContext(CommandGrammarParser.BackQuotedContext,0)


        def getRuleIndex(self):
            return CommandGrammarParser.RULE_quoted

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuoted" ):
                listener.enterQuoted(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuoted" ):
                listener.exitQuoted(self)




    def quoted(self):

        localctx = CommandGrammarParser.QuotedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_quoted)
        try:
            self.state = 98
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.singleQuoted()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                self.doubleQuoted()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 3)
                self.state = 97
                self.backQuoted()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SingleQuotedContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SINGLE_QUOTE(self, i:int=None):
            if i is None:
                return self.getTokens(CommandGrammarParser.SINGLE_QUOTE)
            else:
                return self.getToken(CommandGrammarParser.SINGLE_QUOTE, i)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(CommandGrammarParser.NEWLINE)
            else:
                return self.getToken(CommandGrammarParser.NEWLINE, i)

        def getRuleIndex(self):
            return CommandGrammarParser.RULE_singleQuoted

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSingleQuoted" ):
                listener.enterSingleQuoted(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSingleQuoted" ):
                listener.exitSingleQuoted(self)




    def singleQuoted(self):

        localctx = CommandGrammarParser.SingleQuotedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_singleQuoted)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(CommandGrammarParser.SINGLE_QUOTE)
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3f) == 0 and ((1 << _la) & 1910) != 0:
                self.state = 101
                _la = self._input.LA(1)
                if _la <= 0 or _la==3 or _la==7:
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 107
            self.match(CommandGrammarParser.SINGLE_QUOTE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BackQuotedContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BACKQUOTE(self, i:int=None):
            if i is None:
                return self.getTokens(CommandGrammarParser.BACKQUOTE)
            else:
                return self.getToken(CommandGrammarParser.BACKQUOTE, i)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(CommandGrammarParser.NEWLINE)
            else:
                return self.getToken(CommandGrammarParser.NEWLINE, i)

        def getRuleIndex(self):
            return CommandGrammarParser.RULE_backQuoted

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBackQuoted" ):
                listener.enterBackQuoted(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBackQuoted" ):
                listener.exitBackQuoted(self)




    def backQuoted(self):

        localctx = CommandGrammarParser.BackQuotedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_backQuoted)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(CommandGrammarParser.BACKQUOTE)
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3f) == 0 and ((1 << _la) & 1662) != 0:
                self.state = 110
                _la = self._input.LA(1)
                if _la <= 0 or _la==7 or _la==8:
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 116
            self.match(CommandGrammarParser.BACKQUOTE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DoubleQuotedContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DOUBLE_QUOTE(self, i:int=None):
            if i is None:
                return self.getTokens(CommandGrammarParser.DOUBLE_QUOTE)
            else:
                return self.getToken(CommandGrammarParser.DOUBLE_QUOTE, i)

        def backQuoted(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CommandGrammarParser.BackQuotedContext)
            else:
                return self.getTypedRuleContext(CommandGrammarParser.BackQuotedContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(CommandGrammarParser.NEWLINE)
            else:
                return self.getToken(CommandGrammarParser.NEWLINE, i)

        def BACKQUOTE(self, i:int=None):
            if i is None:
                return self.getTokens(CommandGrammarParser.BACKQUOTE)
            else:
                return self.getToken(CommandGrammarParser.BACKQUOTE, i)

        def getRuleIndex(self):
            return CommandGrammarParser.RULE_doubleQuoted

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDoubleQuoted" ):
                listener.enterDoubleQuoted(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDoubleQuoted" ):
                listener.exitDoubleQuoted(self)




    def doubleQuoted(self):

        localctx = CommandGrammarParser.DoubleQuotedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_doubleQuoted)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(CommandGrammarParser.DOUBLE_QUOTE)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3f) == 0 and ((1 << _la) & 1914) != 0:
                self.state = 121
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [8]:
                    self.state = 119
                    self.backQuoted()
                    pass
                elif token in [1, 3, 4, 5, 6, 9, 10]:
                    self.state = 120
                    _la = self._input.LA(1)
                    if _la <= 0 or ((_la) & ~0x3f) == 0 and ((1 << _la) & 388) != 0:
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 126
            self.match(CommandGrammarParser.DOUBLE_QUOTE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





